--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=rehearsal-hub
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/rehearsal_hub
+spring.datasource.username=d.dubkov
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
